--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,11 @@
-version: '3.8'
-
 services:
-  model_server:
+  server:
     build: 
       context: .
       dockerfile: Dockerfile.server
-    expose:
-      - "8000"
-    volumes:
-      - ./artifacts:/artifacts
+    ports: ["8000:8000"]
+    expose: ["8000"]
+    volumes: [./artifacts:/server/artifacts]
     command: uvicorn main:app --host 0.0.0.0 --port 8000
     # deploy:
     #   resources:
@@ -17,12 +14,10 @@ services:
     #         - driver: nvidia
     #           count: 1
     #           capabilities: [gpu]
-  streamlit_app:
+  app:
     build: 
       context: .
       dockerfile: Dockerfile.app
-    depends_on:
-      - model_server
-    ports:
-      - "8501:8501"
-    command: streamlit run streamlit_app.py --server.port=8501 --server.address=0.0.0.0
+    depends_on: [server]
+    ports: ["8501:8501"]
+    command: streamlit run streamlit_app.py --server.address=0.0.0.0 --server.port=8501
