--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,16 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.server
-    ports: ["8000:8000"]
     expose: ["8000"]
     volumes: [./artifacts:/server/artifacts]
     command: uvicorn main:app --host 0.0.0.0 --port 8000
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
   app:
     build: 
       context: .
